{{$NEXT}}

0.04      2011-02-28 22:43:00 America/Denver
          [Refactor]
          - A Mojito object is now a derived class of Mojito::Page.
            
0.03      2011-02-27 20:47:52 America/Denver
          [Enchantments]
          - base URL implemented so app can be mounted at root or not.
          - Added Mojito::Middleware so Mojito objects can be wrapped
            into the application.
          - Created Tatsumaki version of Mojito.
          
          [Refactor]
          - Created and implemented a Mojito "meta" object to handle 
            the bulk of route bodies.
            

0.02      2011-02-15 20:56:33 America/Denver
          [Enchantments]
          - Auto save and simplified button choices as a result
          - more rows to fallback to when vertical autoresize fails

          [Remedies]
          - Support multiple cpan shortcuts within one document

0.01      2011-02-15 00:36:58 America/Denver
          [Remedies]
          - Exclude Fixture from require modules since it's in the dist.
          
0.001     2011-02-15 00:09:43 America/Denver
          Initial Release