@@ -68,7 +68,7 @@ builder {
 #    enable "Auth::Basic", authenticator => \&Mojito::Auth::authen_cb;
     enable "Auth::Digest", 
               realm => "Mojito", 
-              secret => Mojito::Auth::secret,
+              secret => Mojito::Auth::_secret,
               password_hashed => 1,
               authenticator => Mojito::Auth->new->digest_authen_cb;
     app->start;
