@@ -3,13 +3,14 @@ use Term::Prompt;
 use Mojito::Auth;
 use 5.010;
 
-my ($username, $realm, $password_1, $password_2);
+my $realm = 'Mojito';
+my ($username, $password_1, $password_2);
 PROMPT:
 {
-    $realm    = prompt( 'x', 'realm:',    '', 'Mojito' );
+    #realm = prompt( 'x', 'realm:',    '', 'Mojito' );
     $username = prompt( 'x', 'username:', '', '' );
     $password_1 = prompt( 'p', 'password:', '', '' );
-    $password_2 = prompt( 'p', 'confirm password:', '', '' );
+    $password_2 = prompt( 'p', "confirm password:", '', '' );
     
     if ($password_1 ne $password_2) {
         say "Passwords don't match!";
